// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  onScroll={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  scrollEventThrottle={100}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
      >
        <View
          background="#F8F8F8"
          height="220px"
          p={0}
          style={
            Array [
              Object {
                "display": "flex",
                "height": 220,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              Array [
                Object {
                  "backgroundColor": "#F8F8F8",
                  "borderColor": "#E5E5E5",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "height": 220,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
                  "overflow": "hidden",
                },
              ],
            ]
          }
          width="100%"
        >
          <ARVideo
            loop={true}
            resizeMode="cover"
            size={
              Object {
                "height": 220,
                "width": 750,
              }
            }
            source={
              Object {
                "isAsset": false,
                "isNetwork": false,
                "resizeMode": "cover",
                "type": "mp4",
                "uri": undefined,
              }
            }
          />
        </View>
        <View
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 8,
                "marginTop": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            className="sc-bdVaJa bDWFJH"
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Regular"
            fontSize={14}
            lineHeight={24}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Regular",
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            In-demand artworks, available to buy now
          </Text>
        </View>
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 1)",
              "borderColor": "transparent",
              "borderRadius": 2,
              "borderWidth": 1,
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "width": 130,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": "AvantGardeGothicITC",
                },
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "opacity": 1,
                  "textShadowColor": "white",
                },
              ]
            }
          >
            Browse works
          </Text>
        </View>
        <View
          mb={-3}
          mt={4}
          style={
            Array [
              Object {
                "marginBottom": -16,
                "marginTop": 32,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#E5E5E5",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "width": "100%",
                },
                undefined,
              ]
            }
            width="100%"
          />
        </View>
      </View>
      <RCTScrollView
        dataSource={
          ListViewDataSource {
            "items": 2,
          }
        }
        renderRow={[Function]}
        renderScrollComponent={[Function]}
        renderSeparator={[Function]}
        scrollEnabled={false}
      >
        <View>
          <View
            style={
              Object {
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                      Object {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  JEAN-MICHEL BASQUIAT
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 14,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  1 Work Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                      Object {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  ANA MENDIETA
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 14,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  2 Works Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTScrollView>
`;

exports[`with notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  contentContainerStyle={Object {}}
  onScroll={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  scrollEventThrottle={100}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
      >
        <View
          background="#F8F8F8"
          height="220px"
          p={0}
          style={
            Array [
              Object {
                "display": "flex",
                "height": 220,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              Array [
                Object {
                  "backgroundColor": "#F8F8F8",
                  "borderColor": "#E5E5E5",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "height": 220,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
                  "overflow": "hidden",
                },
              ],
            ]
          }
          width="100%"
        >
          <ARVideo
            loop={true}
            resizeMode="cover"
            size={
              Object {
                "height": 220,
                "width": 750,
              }
            }
            source={
              Object {
                "isAsset": false,
                "isNetwork": false,
                "resizeMode": "cover",
                "type": "mp4",
                "uri": undefined,
              }
            }
          />
        </View>
        <View
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 8,
                "marginTop": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            className="sc-bdVaJa bDWFJH"
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Regular"
            fontSize={14}
            lineHeight={24}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Regular",
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            In-demand artworks, available to buy now
          </Text>
        </View>
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 1)",
              "borderColor": "transparent",
              "borderRadius": 2,
              "borderWidth": 1,
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "width": 130,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": "AvantGardeGothicITC",
                },
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "opacity": 1,
                  "textShadowColor": "white",
                },
              ]
            }
          >
            Browse works
          </Text>
        </View>
        <View
          mb={-3}
          mt={4}
          style={
            Array [
              Object {
                "marginBottom": -16,
                "marginTop": 32,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#E5E5E5",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "width": "100%",
                },
                undefined,
              ]
            }
            width="100%"
          />
        </View>
      </View>
      <RCTScrollView
        dataSource={
          ListViewDataSource {
            "items": 2,
          }
        }
        renderRow={[Function]}
        renderScrollComponent={[Function]}
        renderSeparator={[Function]}
        scrollEnabled={false}
      >
        <View>
          <View
            style={
              Object {
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                      Object {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  JEAN-MICHEL BASQUIAT
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 14,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  1 Work Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginLeft": 20,
                "marginRight": 20,
                "marginTop": 20,
              }
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "cloudfront.url",
                  }
                }
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#f8f8f8",
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 10,
                    "width": 40,
                  }
                }
              />
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "flex": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontSize": 12,
                      },
                      Object {
                        "fontFamily": "AvantGardeGothicITC",
                      },
                      Object {
                        "fontSize": 12,
                      },
                    ]
                  }
                >
                  ANA MENDIETA
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "fontSize": 17,
                      },
                      Object {
                        "color": "#666666",
                        "fontSize": 14,
                        "marginTop": 2,
                      },
                      Object {
                        "fontFamily": "AGaramondPro-Regular",
                      },
                    ]
                  }
                >
                  2 Works Added
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 20,
                  "marginTop": 20,
                }
              }
            >
              <View
                onLayout={[Function]}
              >
                <View
                  accessibilityLabel="Artworks Content View"
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on larger screens 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
    }
  }
  onScroll={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  scrollEventThrottle={100}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
      >
        <View
          background="#F8F8F8"
          height="220px"
          p={0}
          style={
            Array [
              Object {
                "display": "flex",
                "height": 220,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              Array [
                Object {
                  "backgroundColor": "#F8F8F8",
                  "borderColor": "#E5E5E5",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "height": 220,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
                  "overflow": "hidden",
                },
              ],
            ]
          }
          width="100%"
        >
          <ARVideo
            loop={true}
            resizeMode="cover"
            size={
              Object {
                "height": 220,
                "width": 750,
              }
            }
            source={
              Object {
                "isAsset": false,
                "isNetwork": false,
                "resizeMode": "cover",
                "type": "mp4",
                "uri": undefined,
              }
            }
          />
        </View>
        <View
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 8,
                "marginTop": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            className="sc-bdVaJa bDWFJH"
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Regular"
            fontSize={14}
            lineHeight={24}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Regular",
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            In-demand artworks, available to buy now
          </Text>
        </View>
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 1)",
              "borderColor": "transparent",
              "borderRadius": 2,
              "borderWidth": 1,
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "width": 130,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": "AvantGardeGothicITC",
                },
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "opacity": 1,
                  "textShadowColor": "white",
                },
              ]
            }
          >
            Browse works
          </Text>
        </View>
        <View
          mb={-3}
          mt={4}
          style={
            Array [
              Object {
                "marginBottom": -16,
                "marginTop": 32,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#E5E5E5",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "width": "100%",
                },
                undefined,
              ]
            }
            width="100%"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
              "justifyContent": "center",
              "marginLeft": 20,
              "marginRight": 20,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "maxWidth": 320,
                "paddingBottom": 60,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 30,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            You haven’t followed any artists yet.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 18,
                  "marginTop": 10,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Follow artists to see new works that have been added to Artsy
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`without notifications lays out correctly on small screens 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flex": 1,
    }
  }
  onScroll={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  scrollEventThrottle={100}
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 20,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 20,
            },
            undefined,
          ]
        }
      >
        <View
          background="#F8F8F8"
          height="220px"
          p={0}
          style={
            Array [
              Object {
                "display": "flex",
                "height": 220,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "100%",
              },
              Array [
                Object {
                  "backgroundColor": "#F8F8F8",
                  "borderColor": "#E5E5E5",
                  "borderRadius": 2,
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "height": 220,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "width": "100%",
                },
                Object {
                  "overflow": "hidden",
                },
              ],
            ]
          }
          width="100%"
        >
          <ARVideo
            loop={true}
            resizeMode="cover"
            size={
              Object {
                "height": 220,
                "width": 750,
              }
            }
            source={
              Object {
                "isAsset": false,
                "isNetwork": false,
                "resizeMode": "cover",
                "type": "mp4",
                "uri": undefined,
              }
            }
          />
        </View>
        <View
          my={2}
          style={
            Array [
              Object {
                "marginBottom": 8,
                "marginTop": 8,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            className="sc-bdVaJa bDWFJH"
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Regular"
            fontSize={14}
            lineHeight={24}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Regular",
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                undefined,
              ]
            }
          >
            In-demand artworks, available to buy now
          </Text>
        </View>
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0, 0, 0, 1)",
              "borderColor": "transparent",
              "borderRadius": 2,
              "borderWidth": 1,
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "width": 130,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": "AvantGardeGothicITC",
                },
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "opacity": 1,
                  "textShadowColor": "white",
                },
              ]
            }
          >
            Browse works
          </Text>
        </View>
        <View
          mb={-3}
          mt={4}
          style={
            Array [
              Object {
                "marginBottom": -16,
                "marginTop": 32,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#E5E5E5",
                  "borderStyle": "solid",
                  "borderWidth": 1,
                  "width": "100%",
                },
                undefined,
              ]
            }
            width="100%"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "height": "100%",
              "justifyContent": "center",
              "marginLeft": 20,
              "marginRight": 20,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "maxWidth": 320,
                "paddingBottom": 60,
              },
              undefined,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 30,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            You haven’t followed any artists yet.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={0}
            style={
              Array [
                Object {
                  "fontFamily": "AGaramondPro-Regular",
                  "fontSize": 18,
                  "marginTop": 10,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            Follow artists to see new works that have been added to Artsy
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
